Fixed icon flex shrink on mobile for global promo banner icon
VUE-216

--- a/source/css/scss/app/global-promo.scss
+++ b/source/css/scss/app/global-promo.scss
@@ -32,7 +32,8 @@
         height: rem-calc(22);
         width: rem-calc(22);
         margin-right: rem-calc(10);
-        margin-top: -0.2rem;
+		margin-top: -0.2rem;
+		flex-shrink: 0;
     }
 
 	.content {
